log/build_2024-06-07_16-16-03/rotation_visualization/stderr.log
  File "/home/klingjac/AERO740/rotation_visualization_ws/install/rotation_visualization/lib/python3.10/site-packages/rotation_visualization/visualization_nodeo.py", line 96
    (static_q[])
     ^^^^^^^^^^
SyntaxError: f-string: invalid syntax. Perhaps you forgot a comma?

